--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "locomotive-scroll": "^4.1.4"
   }
 }
